fix: Add New Deal "Title" field is not visible

--- a/app/styles/components/pages/deals/dashboard/_roles.scss
+++ b/app/styles/components/pages/deals/dashboard/_roles.scss
@@ -301,7 +301,6 @@
   }
 
   #deal-add-role-title--drp {
-    width: 100%;
     height: 48px;
     text-align: left;
     border: none;
